--- a/css/main.css
+++ b/css/main.css
@@ -1684,7 +1684,7 @@ pre .javascript .function {
   width: 4px;
   height: 4px;
   border-radius: 50%;
-  background: #feff91;
+  background: #3effd5;
 }
 .links-of-blogroll {
   font-size: 13px;
